# assignment_optimization-2Dgrasp

./: .metadata.json  CMakeLists.txt  README.md  index.html
.github/workflows/: gh-pages.yml
cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  InstallBasicPackageFiles.cmake
doxygen/: Doxyfile
doxygen/doc/html/: annotated.html  classes.html  classproblem__ns_1_1Grasp-members.html  classproblem__ns_1_1Grasp.html  classproblem__ns_1_1Problem-members.html  classproblem__ns_1_1Problem.html  classproblem__ns_1_1Solver-members.html  classproblem__ns_1_1Solver.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  problem_8h_source.html  solver_8h_source.html  structproblem__ns_1_1Force-members.html  structproblem__ns_1_1Force.html
doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classproblem__ns_1_1Grasp.eps  classproblem__ns_1_1Grasp.tex  classproblem__ns_1_1Problem.tex  classproblem__ns_1_1Solver.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  hierarchy.tex  refman.tex  structproblem__ns_1_1Force.tex
lib/: problem.cpp  problem.h  solver.cpp  solver.h
scripts/: plot_2Dgrasp-problem.m
smoke-test/: CMakeLists.txt  README.md  post-test.sh  pre-test.sh  test.cpp  test.sh  test.xml
src/: main.cpp
